input overflow temp fix

--- a/my-app/app/components/ScoreCard.css
+++ b/my-app/app/components/ScoreCard.css
@@ -1,4 +1,9 @@
 .scoreboard {
+  
   display: grid;
-  grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
+  grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px 50px;
+}
+
+.holeScore {
+  width:40px
 }
